tdf#162916 writerfilter TOC: import "no page number" flag

The field command "TOC \n 2-2" means that
level 2 entries should not display the page number,
so in LO just exclude those portions from the definitions.

The impact only becomes noticable when you update the TOC,
because the initial content is just read from document.xml.

The export part was already handled at LO initial import,
since DOC format needed the proper sFieldCmd string.
DOC format already imports this just fine.

Note that the unit test also specifies 'TOC \o "2-3"'
which means that the first level should not show,
but I don't think LO supports skipping earlier levels.

make CppunitTest_sw_ooxmlexport10 \
    CPPUNIT_TEST_NAME=testTdf162916_nastyTOC

Change-Id: I9661c56c84bcd28bf1664d808a0e9c38051cf67b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173885
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173886
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>